--- a/src/html/register.html
+++ b/src/html/register.html
@@ -3,22 +3,20 @@
 
 <head>
   <meta charset="utf-8">
-  <title>HappyHouse |  회원 정보</title>
+  <title>HappyHouse |  회원 가입</title>
   <meta name="description"
     content="The Project a Bootstrap-based, Responsive HTML5 Template">
   <meta name="author" content="author">
 
-  <!-- Favicon -->
-  <link rel="shortcut icon" href="images/favicon.ico">
-  <script type="text/javascript" src="asset/js/login.js"></script>
-  <link rel="stylesheet" href="asset/css/styles.css" />
+
 </head>
 
 <!-- top 갈아낄것-->
+<!-- Navigation-->
 <nav class="navbar navbar-light bg-dark static-top">
   <div class="container">
       <!-- <a class="navbar-brand" href="#!">Start Bootstrap</a> -->
-      <a class="navbar-brand" href="registerCheck.html"></a>
+      <a class="navbar-brand" href="register.html"></a>
       <div style="display: flex; align-items: center;">
         <div>
         </div>
@@ -29,15 +27,21 @@
       <div class="container">
         <ol class="breadcrumb">
           <li class="breadcrumb-item"><i class="fa fa-home pr-2"></i><a
-            class="link-dark text-white" href="main_page.html">Home</a></li>
-          <li class="breadcrumb-item active">회원 정보</li>
+            class="link-dark text-white" href="index.html">Home</a></li>
+          <li class="breadcrumb-item active">회원 가입</li>
         </ol>
       </div>
   </div>
 </nav>
+<!-- Masthead-->
 <!-- top 갈아낄것-->
 
 
+</div>
+	</div>
+	<div class="breadcrumb-container">
+		
+	</div>
 	<!-- breadcrumb end -->
 
 	<!-- main-container start -->
@@ -45,7 +49,7 @@
 	<div class="register-page bg-secondary col text-black-50">
     <div class="p-5"></div>
     <div class="container bg-light rounded-3 p-5">
-      <h1>회원 정보 확인</h1>
+      <h1>회원 가입</h1>
       <div class="form form-subscribe">
         <form name="register-form" class="row justify-content-md-center">
           <div class = "row p-2">  
@@ -54,7 +58,13 @@
               아이디 <text class ="text-danger">*</text>
             </div>
             <div class = "col">
-              <text id = "show_id"></text>
+              <input style="width: 300px;"
+                id="id"
+                name="id"
+                type="id"
+                placeholder="id"
+              />
+              <i class="fa fa-pencil form-control-feedback pr-4"></i>
             </div>
           </div>  
           <div class = "row p-2">  
@@ -63,7 +73,12 @@
               비밀번호 <text class ="text-danger">*</text>
             </div>
             <div class = "col" >
-              <text id = "show_password"></text>
+              <input style="width: 300px;"
+                id="password"
+                name="password"
+                type="password"
+                placeholder="영문 숫자 포함 6자리 이상"
+              />
             </div>
           </div>
           <div class = "row p-2">  
@@ -72,7 +87,12 @@
               이름 <text class ="text-danger">*</text>
             </div>
             <div class = "col">
-              <text id = "show_name"></text>
+              <input style="width: 300px;"
+                id="name"
+                name="name"
+                type="name"
+                placeholder="User Name"
+              />
             </div>
           </div>
           <div class = "row p-2">  
@@ -81,7 +101,12 @@
               주소 <text class ="text-danger">*</text>
             </div>
             <div class = "col">
-              <text id = "show_email"></text>
+              <input style="width: 300px;"
+                id="email"
+                name="email"
+                type="email"
+                placeholder="adress"
+              />
             </div>
           </div>
           <div class = "row p-2">  
@@ -90,14 +115,15 @@
               전화번호 <text class ="text-danger">*</text>
             </div>
             <div class = "col">
-              <text id = "show_phone"></text>
+              <input style="width: 300px;"
+                id="phone"
+                name="phone"
+                type="phone"
+                placeholder="010-xxxx-xxx"
+              />
             </div>
-          </div> 
-          <script>
-            show_regist_info();
-          </script>
-          <button class="bg-info m-3" onClick="location.href='index.html'" type="button" style="width: 100px;">확인</button>
-          <button class="bg-info m-3" onClick="location.href='register.html'"  type="button" style="width: 100px;">수정</button>
+          </div>  
+          <button class="bg-warning" onclick="regist()" type="button" style="width: 100px;">등록</button>
         </form>
       </div>
     </div>
