--- a/src/html/registerCheck.html
+++ b/src/html/registerCheck.html
@@ -8,6 +8,8 @@
     content="The Project a Bootstrap-based, Responsive HTML5 Template">
   <meta name="author" content="author">
 
+  <!-- Favicon -->
+  <link rel="shortcut icon" href="images/favicon.ico">\
 </head>
 
 <!-- top 갈아낄것-->
@@ -88,10 +90,7 @@
             <div class = "col">
               <text id = "show_phone"></text>
             </div>
-          </div> 
-          <script>
-            show_regist_info();
-          </script>
+          </div>
           <button class="bg-info m-3" onClick="location.href='index.html'" type="button" style="width: 100px;">확인</button>
           <button class="bg-info m-3" onClick="location.href='register.html'"  type="button" style="width: 100px;">수정</button>
         </form>
