--- a/src/html/register.html
+++ b/src/html/register.html
@@ -8,7 +8,8 @@
     content="The Project a Bootstrap-based, Responsive HTML5 Template">
   <meta name="author" content="author">
 
-
+  <!-- Favicon -->
+  <link rel="shortcut icon" href="images/favicon.ico">
 </head>
 
 <!-- top 갈아낄것-->
@@ -51,7 +52,7 @@
     <div class="container bg-light rounded-3 p-5">
       <h1>회원 가입</h1>
       <div class="form form-subscribe">
-        <form name="register-form" class="row justify-content-md-center">
+        <form name="register-form" id="register-form" class="row justify-content-md-center">
           <div class = "row p-2">  
             <div class = "col-1"></div>
             <div class = "col-2">
@@ -123,7 +124,7 @@
               />
             </div>
           </div>  
-          <button class="bg-warning" onclick="regist()" type="button" style="width: 100px;">등록</button>
+          <button class="bg-warning" id = "do-regist" type="button" style="width: 100px;">등록</button>
         </form>
       </div>
     </div>
